# ComfyUI-i18n-demo

./: README.md  __init__.py  demo_node.py  pyproject.toml
example_workflows/: i18n-demo.json
js/: demo_extension.js
locales/en/: commands.json  main.json  nodeDefs.json  settings.json
locales/es/: main.json  nodeDefs.json  settings.json
locales/fr/: main.json  nodeDefs.json  settings.json
locales/ja/: main.json  nodeDefs.json  settings.json
locales/ko/: main.json  nodeDefs.json  settings.json
locales/ru/: main.json  nodeDefs.json  settings.json
locales/zh/: commands.json  main.json  nodeDefs.json  settings.json
locales/zh-TW/: main.json  nodeDefs.json  settings.json
