[project]
name = "i18n-demo"
description = "Example of COmfyUI Node Localization"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/comfyui-wiki/ComfyUI-i18n-demo"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/comfyui-wiki/ComfyUI-i18n-demo/wiki"
"Bug Tracker" = "https://github.com/comfyui-wiki/ComfyUI-i18n-demo/issues"

[tool.comfy]
PublisherId = "comfyui-wiki"
DisplayName = "ComfyUI-i18n-demo"
Icon = "https://avatars.githubusercontent.com/u/192523189"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

